<resources>
	<string	name="app_name"	translatable="false">YouTube Pro</string>
	<string	name="grant_mic">Please Grant Microphone Permission in order to use Speech Recognition</string>
	<string	name="grant_storage">Please Grant Storage Permission in order to download files</string>
	<string	name="no_pip">Unfortunately, PIP is not supported on your Android version</string>
	<string	name="dl_started">Download started</string>
	<string	name="dl">Download</string>
	<string name="home">Home</string>
	<string name="subscriptions">Subscriptions</string>
	<string name="library">Library</string>
	<string name="pip_mode">Picture-in-Picture</string>
	<string name="go_back">Go back</string>
	<string name="search">Search</string>
	<string name="settings">Settings</string>
</resources>
